--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^4.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
